force-app/main/default/objects/logSettings__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables this logging functionality.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>