force-app/main/default/objects/logSettings__c/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <description>ERROR, WARNING, INFO, DEBUG</description>
    <inlineHelpText>Must be one of the following; ERROR, WARNING, INFO, DEBUG.</inlineHelpText>
    <label>Logging Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>