force-app/main/default/objects/logSettings__c/fields/retention__c.field-meta.xml
<CustomField>
    <fullName>retention__c</fullName>
    <inlineHelpText>Nuber of days logs can persist for.</inlineHelpText>
    <label>Retention (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>